--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
       </div>
     </section>
 
-    <div>&copy;Pluralsight 2018</div>
+    <div class="text-primary">&copy;Pluralsight 2018</div>
   </footer>
 
 </body>
