--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,22 +10,22 @@
 <body>
 
   <!-- NAVIGATION -->
-  <nav>
+  <nav class="header-nav">
     <div class="container flex space-between">
       <!-- BRANDING -->
-      <div class="flex align-center">
+      <div class="brand flex align-center">
         <a href="#">
-          <img alt="Carved Rock Fitness" src="img/carved-rock-logo.png">
+          <img class="logo" alt="Carved Rock Fitness" src="img/carved-rock-logo.png">
         </a>
       </div>
       <!-- SEARCH -->
       <div class="flex flex-one align-center">
         <div>
           <form>
-            <input aria-label="Search" placeholder="What can we help you find?" type="search">
-            <button type="submit">SEARCH</button>
+            <input class="search-box" aria-label="Search" placeholder="What can we help you find?" type="search">
+            <button class="search-button" type="submit">SEARCH</button>
           </form>
-          <ul class="flex space-between">
+          <ul class="nav-list flex space-between">
             <li><a href="#">Clothing</a></li>
             <li><a href="#">Footwear</a></li>
             <li><a href="#">Equipment</a></li>
@@ -33,19 +34,19 @@
           </ul>
         </div>
         <!-- PROFILE -->
-        <div class="flex align-center">
-          <div class="flex flex-column">
-            John Doe <a href="#">Log Out</a>
+        <div class="profile flex align-center">
+          <div class="account flex flex-column">
+            John Doe <a class="logout" href="#">Log Out</a>
           </div>
-          <div><img alt="John Doe" src="img/profile-pic.jpg"></div>
+          <div class="profile-pic"><img alt="John Doe" src="img/profile-pic.jpg"></div>
         </div>
       </div>
     </div>
   </nav>
 
     <!-- HERO -->
-  <section>
-    <div class="container flex flex-column align-center center">
+  <section class="hero">
+    <div class="container flex flex-column center align-center">
       <h1>Get A Grip</h1>
       <h2>20% Off</h2>
       <p>Throughout The Season</p>
@@ -57,9 +58,9 @@
 
     <!-- SALE BANNER -->
     <section>
-      <div class="flex align-center center">
+      <div class="banner flex center align-center">
         <img alt="Brown Boots" src="img/brown-boots.jpg">
-        <div>
+        <div class="banner-text">
           <div class="text-light">Couples retreat weekend</div>
           <div class="text-secondary">Save an extra 20%</div>
           <div class="text-primary">when you buy 2 pairs of boots</div>
@@ -70,37 +71,37 @@
 
     <!-- CATEGORIES -->
     <section>
-      <div>
+      <div class="category">
         <a href="#">
           <img alt="Splash Chic" src="img/category-1.jpg" />
-          <div>
+          <div class="category-text">
             <h3>Splash Chic</h3>
             <div>Women's Wet Gear</div>
           </div>
         </a>
       </div>
-      <div>
+      <div class="category">
         <a href="#">
           <img alt="Kid Klimbers" src="img/category-2.jpg" />
-          <div>
+          <div class="category-text">
             <h3>Kid Klimbers</h3>
             <div>Children's Gear</div>
           </div>
         </a>
       </div>
-      <div>
+      <div class="category">
         <a href="#">
           <img alt="Pack It In" src="img/category-3.jpg" />
-          <div>
+          <div class="category-text">
             <h3>Pack It In</h3>
             <div>Camping Gear</div>
           </div>
         </a>
       </div>
-      <div>
+      <div class="category">
         <a href="#">
           <img alt="Nature's AC" src="img/category-4.jpg" />
-          <div>
+          <div class="category-text">
             <h3>Nature's AC</h3>
             <div>Men's Shorts</div>
           </div>
@@ -109,9 +110,9 @@
     </section>
 
     <!-- FULL BANNER -->
-    <section>
-      <div></div>
-      <div class="flex flex-column align-center center">
+    <section class="full-banner">
+      <div class="full-banner-image"></div>
+      <div class="full-banner-sidebar flex flex-column align-center center">
         <h4>Trail Review</h4>
         <div>Asphalt</div>
         <div>National Park</div>
@@ -123,9 +124,9 @@
 
   <!-- FOOTER -->
   <footer>
-    <section class="container space-between">
-      <div>
-        <div class="text-primary">Customer Support</div>
+    <section class="lists container space-between">
+      <div class="links">
+        <div class="link-header text-primary">Customer Support</div>
         <ul>
           <li><a href="#">Contact Us</a></li>
           <li><a href="#">Order Tracker</a></li>
@@ -135,8 +136,8 @@
           <li><a href="#">Site Map</a></li>
         </ul>
       </div>
-      <div>
-        <div class="text-primary">Company Info</div>
+      <div class="links">
+        <div class="link-header text-primary">Company Info</div>
         <ul>
           <li><a href="#">About Us</a></li>
           <li><a href="#">Careers</a></li>
@@ -147,41 +148,41 @@
           <li><a href="#">Mobile Apps</a></li>
         </ul>
       </div>
-      <div>
-        <div class="text-primary">Privacy &amp; Terms</div>
+      <div class="links">
+        <div class="link-header text-primary">Privacy &amp; Terms</div>
         <ul>
           <li><a href="#">Privacy &amp; Security</a></li>
           <li><a href="#">Statement</a></li>
           <li><a href="#">Terms &amp; Conditions</a></li>
         </ul>
       </div>
-      <div>
-        <div class="text-primary">Follow Us</div>
+      <div class="links social">
+        <div class="link-header text-primary">Follow Us</div>
         <ul>
-          <li><a href="#"></a></li>
-          <li><a href="#"></a></li>
-          <li><a href="#"></a></li>
-          <li><a href="#"></a></li>
+          <li><a href="#" class="twitter"></a></li>
+          <li><a href="#" class="facebook"></a></li>
+          <li><a href="#" class="instagram"></a></li>
+          <li><a href="#" class="pinterest"></a></li>
         </ul>
-        <div class="text-primary">
-          <div>Email Updates</div>
-          <div>Exclusive sales, special offers, and more.</div>
-          <input class="form-control" type="text" placeholder="Enter email address" />
+        <div class="newsletter">
+          <div class="link-header">Email Updates</div>
+          <div class="link-subheader">Exclusive sales, special offers, and more.</div>
+          <input type="text" class="form-control" placeholder="Enter email address" />
           <button class="btn btn-primary">Sign up</button>
         </div>
       </div>
     </section>
 
     <!-- PS DEMO -->
-    <section>
-      <div class="flex flex-column align-center">
+    <section class="ps">
+      <div class="align-center flex flex-column">
         <img src="img/pluralsight-white.png" />
-        <div>This site is created for demonstrative purposes only and does not offer any real products or services.</div>
+        <div class="demo">This site is created for demonstrative purposes only and does not offer any real products or services.</div>
       </div>
     </section>
 
-    <div class="text-primary">&copy;Pluralsight 2018</div>
+    <!-- COPYRIGHT -->
+    <div class="copyright text-primary">&copy;Pluralsight 2018</div>
   </footer>
-
 </body>
 </html>
